# OLGCI-Interpreter

./: .gitignore  CMakeLists.txt  main.cpp  test.txt  testing.cpp
include/: TextTable.h
src/: Common.cpp  Common.h  Sequence.cpp  Sequence.h  Truthtable.cpp  Truthtable.h
src/Lexer/: DefineLexerComponent.cpp  DefineLexerComponent.h  Environment.h  ILexerComponent.h  Lexer.cpp  Lexer.h  LexerCommon.h  PrintLexerComponent.cpp  PrintLexerComponent.h
